# agent-surface

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  LICENSE-CC-BY-4.0  Makefile  README.md
.github/: PULL_REQUEST_TEMPLATE.md
conformance/: README.md  __init__.py  check.py
drafts/: agent-surface.md
mocks/: README.md  __init__.py  adapter.py  behavior.py  check.py  mock_app.py  (+4 more)
tools/asp-api-importer/: Cargo.toml  README.md
tools/asp-api-importer/cases/v1/: cases.json
tools/asp-api-importer/schema/: annotation.schema.json  cases.schema.json
tools/asp-api-importer/src/: lib.rs  main.rs
tools/asp-api-importer/tests/: cli.rs
tools/asp-api-importer/tests/fixtures/: invalid-asyncapi-receive.json  invalid-dual-discriminator.json  invalid-duplicate.json  invalid-empty.json  invalid-final-lint.json  invalid-incomplete.json  invalid-json-duplicate.json  invalid-kind.json  invalid-missing-root.json  invalid-negative-zero.json  invalid-noncharacter-key.json  invalid-noncharacter-value.json  invalid-placement.json  invalid-ref.json  invalid-reserved-base.json  invalid-unknown-field.json  invalid-unsafe-integer.json  invalid-unsafe-integral-float.json  invalid-version.json  positive-asyncapi.json  positive-openapi.json
tools/asp-api-importer/tests/golden/: positive-asyncapi.json  positive-openapi.json
tools/asp-manifest-linter/: Cargo.toml  README.md
tools/asp-manifest-linter/rules/v1/: rules.json
tools/asp-manifest-linter/schema/: diagnostics.schema.json  rules.schema.json
tools/asp-manifest-linter/src/: lib.rs  main.rs
tools/asp-manifest-linter/tests/: cli.rs
tools/asp-manifest-linter/tests/fixtures/: invalid-idempotency.json  invalid-missing-risk.json  invalid-missing-schema.json  invalid-risk-explanation.json  invalid-risk-label.json  invalid-scope.json  valid.json
tools/asp-replay/: Cargo.toml  README.md
tools/asp-replay/cases/v1/: cases.json
tools/asp-replay/checks/v1/: checks.json
tools/asp-replay/fuzz/: .gitignore  Cargo.toml  README.md
tools/asp-replay/fuzz/corpus/parse_verify/: seed-duplicate-member.json  seed-negative-zero.json
tools/asp-replay/fuzz/corpus/structured_bundle/: seed-typed-plan.txt
tools/asp-replay/fuzz/dictionaries/: replay.dict
tools/asp-replay/fuzz/fuzz_targets/: parse_verify.rs  structured_bundle.rs
tools/asp-replay/rules/v1/: native-surface.json
tools/asp-replay/schema/: bundle.schema.json  cases.schema.json  checks.schema.json  composition-report.schema.json  report.schema.json
tools/asp-replay/src/: composition.rs  fuzz_support.rs  hash.rs  lib.rs  main.rs  registry.rs  rehash.rs  selfcheck.rs  specifications.rs  strict_json.rs  surface_provider.rs  tests.rs  value.rs
tools/asp-replay/src/validation/: context.rs  engine.rs  events.rs  mod.rs  receipts.rs  records.rs  schema.rs  secrets.rs  session.rs  state.rs  support.rs
tools/asp-replay/tests/: cli.rs  properties.rs
tools/asp-replay/tests/fixtures/: complete-session.json  event-receipt-flow.json  explicit-capture-gap.json  invalid-duplicate.json
tools/asp-replay/tests/golden/: complete-session.report.json  event-receipt-flow.report.json  explicit-capture-gap.report.json  invalid-empty.report.json
(+53 files in other folders)
