[package]
name = "asp-replay-tool"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "Deterministic offline integrity replay for Agent Surface Protocol evidence bundles"
repository = "https://github.com/0al-spec/agent-surface"
rust-version = "1.97"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ["cfg(fuzzing)"] }

[lib]
name = "asp_replay"
path = "src/lib.rs"

[[bin]]
name = "asp-replay"
path = "src/main.rs"

[dependencies]
asp-manifest-linter = { path = "../asp-manifest-linter", version = "=0.2.0" }
base64 = "0.22"
clap = { version = "4.6", features = ["derive"] }
jsonschema = { version = "0.47", default-features = false }
libc = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_json_canonicalizer = "=0.3.2"
sha2 = "0.10"
specification-core = "=0.1.0"
thiserror = "2.0"

[dev-dependencies]
assert_cmd = "2.1"
predicates = "3.1"
proptest = { version = "=1.11.0", default-features = false, features = ["std"] }
